--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -1,7 +1,15 @@
-*{
-    background-color: dimgrey;
+:root{
+    background-color: dimgray;
 }
 
+*{
+    font-family: 'Sigmar One', 'Times New Roman', sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
 nav{
     margin: 10px;
     display: flex;
@@ -13,8 +21,13 @@ nav{
     text-align: right;
 }
 
+#start-screen {
+    text-align: center;
+}
+
 h1{
     text-align: center;
     font-size: 40px;
     margin: 40px;
 }
+
